# Effective-Mobile

./: README.md  pyproject.toml
Api-Github/: .env_example  test_api.py
E2E-UI/: chrome_driver.py  main.py
